--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title> my website </title>
+    <title>My Website</title>
   </head>
   <body>
     <h1>My Biography</h1>
@@ -13,7 +13,7 @@
       <li>Mom</li>
       <li>Dad</li>
       <li>Younger sister</li>
-      <li>2 Younger brothers</li>
+      <li>2 Younger brothers</li><br>
     </ul>
     <hr>
     <h3>Interests</h3>
@@ -24,14 +24,14 @@
       <li>Video Games</li>
       <li>Coding</li>
       <li>Sleeping</li>
-      <li>Guitar</li>
+      <li>Guitar</li><br>
     </ul>
     <hr>
     <h3>Sports &amp; Activities</h3>
     <ul>
       <li>Cross Country</li>
       <li>Tennis</li>
-      <li>Guitar</li>
+      <li>Guitar</li><br>
     </ul>
     <hr>
     <h3>Pets</h3>
@@ -40,7 +40,7 @@
       <p>My sister is really campaigning for one.<br>
         My mom grew up with dogs and would be fine with it.<br>
         My dad was somewhat reluctant, but he's fine with dogs, as long as they don't shed.<br>
-        My younger brothers and I would be really happy to get a dog.</p>
+        My younger brothers and I would be really happy to get a dog.<br></p>
     </ul>
     <hr>
     <h3>Courses</h3>
@@ -55,7 +55,7 @@
       <li>Explore Computer Science &amp; Chinese 2</li>
       <li>Accounting 1 &amp; Biology C</li>
     </ol>
-    <ul><p>However, all my teachers are great so I can't just say that Teacher A &lt; Teacher X or that Teacher B &gt; Teacher Y.</p></ul>
+    <ul><p>However, all my teachers are great so I can't just say that Teacher A &lt; Teacher X or that Teacher B &gt; Teacher Y.</p><br></ul>
     <hr>
     <h3>Value</h3>
     <ul>
