--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <li>Video Games</li>
       <li>Coding</li>
       <li>Sleeping</li>
-      <li>Guitar</li><br>
+      <li>Guitar</li>
+      <img src="a.png" alt="Fender Squier Strat Mini"><br>
     </ul>
     <hr>
     <h3>Sports &amp; Activities</h3>
