--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <li>Coding</li>
       <li>Sleeping</li>
       <li>Guitar</li>
-      <img src="a.png" alt="Fender Squier Strat Mini"><br>
     </ul>
+    <img src="a.png" alt="Fender Squier Strat Mini">
     <hr>
     <h3>Sports &amp; Activities</h3>
     <ul>
